src/objects/Note_History__c.object
<CustomObject>
    <fields>
        <fullName>Notes_ID__c</fullName>
        <label>Notes ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Body__c</fullName>
        <label>Old Body</label>
        <length>3200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Old_Note_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Old Note By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Notes_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Note History</label>
    <nameField>
        <displayFormat>NHN-{0000}</displayFormat>
        <label>Note History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notes History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>